# game-qa-companion

./: .gitignore  README.md  pyproject.toml  run_gui.bat
configs/: example.yaml  night_crows.yaml
demo/: README.md
inspections/20260612_112124/: elements.json
inspections/20260612_112359/: elements.json
inspections/20260612_164747/: elements.json
inspections/20260612_164802/: elements.json
inspections/20260612_171041/: elements.json
inspections/20260612_172000/: elements.json
inspections/20260612_173102/: elements.json
inspections/20260612_173419/: elements.json
inspections/th30/: elements.json
src/companion/: cli.py  config.py  library.py  session.py
src/companion/analysis/: pipeline.py  qa.py  report.py
src/companion/capture/: adb.py  artifacts.py  windows.py
src/companion/gui/: app.py  capture_panel.py  claude_status.py  image_editor.py  inspect_panel.py  library_panel.py  sessions_panel.py  settings.py  settings_dialog.py  util.py  workers.py
src/companion/providers/: base.py  claude_agent.py
tests/: conftest.py  test_adb.py  test_analyzer.py  test_artifacts.py  test_claude_status.py  test_cli.py  test_config.py  test_detection_filters.py  test_e2e.py  test_elements.py  test_gui.py  test_image_editor.py  test_interrupt.py  test_library.py  test_low_contrast.py  test_max_candidates.py  test_nested_detection.py  test_ocr.py  test_pipeline.py  test_progress_cancel.py  test_providers.py  test_prune_unknown.py  test_qa.py  test_report.py  test_session.py  test_settings.py  test_stability_mask.py  test_windows_capture.py
(+3 files in other folders)
