[project]
name = "game-qa-companion"
version = "0.1.0"
description = "Game QA session analyzer - rule-based signals + LLM judgment with evidence"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "mss>=9.0",
    "pygetwindow>=0.0.9",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0",
    "pyside6>=6.6",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7", "paddlepaddle>=2.6"]

[project.scripts]
companion = "companion.cli:main"
companion-gui = "companion.gui.app:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/companion"]
